# Nimbus

./: Cargo.toml  README.md  gitignore
.github/workflows/: release.yml
src/: config.rs  forecast_window.rs  geo.rs  main.rs  settings_window.rs  tray.rs  weather.rs
