[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"
description = "A minimal weather tray app"
license = "MIT"

[[bin]]
name = "nimbus"
path = "src/main.rs"

[dependencies]
# Tray
tray-icon = "0.19"

# Windowing & event loop
winit = "0.30"

# egui rendering stack (no eframe — we own the event loop)
egui = "0.31"
egui-winit = "0.31"
egui-wgpu = { version = "0.31", features = ["winit"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Misc
dirs = "5"
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
