[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"
description = "A minimal weather tray app"
license = "MIT"

[[bin]]
name = "nimbus"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
winit = "0.30"
eframe = "0.31"
egui = "0.31"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
image = { version = "0.25", features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
