[package]
name = "nimbus"
version = "0.1.2"
edition = "2021"
description = "Минималистичный погодный информер в трее"
license = "MIT"
authors = ["GhostedOwl"]

[[bin]]
name = "nimbus"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
winit = "0.30"
eframe = "0.31"
egui = "0.31"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "libgtk-3-0, libappindicator3-1 | libayatana-appindicator3-1, libxdo3"
assets = [
    ["target/release/nimbus", "usr/bin/nimbus", "755"],
]
maintainer-scripts = "debian/"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nimbus", dest = "/usr/bin/nimbus", mode = "755" },
]

[package.metadata.generate-rpm.requires]
gtk3 = "*"
libappindicator-gtk3 = "*"
